fix overflow hidding the bottom of the right col

--- a/webdebugger/src/components/snapshot.css
+++ b/webdebugger/src/components/snapshot.css
@@ -3,7 +3,7 @@
   vertical-align: top;
   flex-grow: 1;
   margin-left: 26px;
-  overflow: scroll;
+  max-width: calc(100% - 26px)
 }
 
 .snapshot__basename {
